--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "jest-enzyme": "^7.1.1",
     "lodash": "^4.17.15",
     "react": "^16.10.2",
-    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
+    "react-icons-kit": "^1.3.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-bootstrap": "^1.0.0-beta.14"
   }
 }
